--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .navegacion_container{
     display: flex;
-    height: 60px;
+    height: 45px;
     background-color: #F5E6D3;
     justify-content: space-between;
 }
@@ -15,7 +15,7 @@
     margin: 3px;
     border-radius: 100%;
     border: 2px solid 	#A0522D;
-    height: 50px;
+    height: 35px;
 }
 
 .navegacion_links{
@@ -39,6 +39,7 @@
 }
 
 .hero_container{
+    width: 100%;
     position: relative;
     display: inline-block;
     background-color: #F5E6D3;
@@ -52,18 +53,28 @@
 
 .texto-img{
     position: absolute;
-    top: 25%;
+    top: 50%;
     left: 5%;
+    transform: translateY(-50%);
     color: white;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    text-shadow: 2px 2px 6px rgba(160, 82, 45, 0.6);
 }
 .texto-img h1{
-    font-family: sans-serif;
-    font-size: bold;
+    font-size: 40px;
+    font-family: 'Georgia', serif;
+    font-weight: bold;
 }
 
-.frase_clave{
-    font-size: bold;
+.frase_clave {
+    font-size: 18px;
     font-weight: bold;
+    font-family: 'Georgia', serif;
+    text-transform: uppercase;
+    letter-spacing: 0.08em;
+}
+
+.productos_container{
+    height: 100vh;
+    background-color: #F5E6D3;
 }
 
