--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -34,3 +34,16 @@
 .card_text{
     font-size: 1em;
 }
+
+@media (min-width: 600px) {
+    .card{
+        flex-wrap: nowrap;
+        height: 80%;
+        gap: 30px;
+    }
+
+    .card_img{
+        width: 25em;
+    }
+    
+}
