--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -46,3 +46,47 @@
   text-align: center;
   margin-top: 5px; /* opcional, para separarlo del resto */
 }
+
+@media (min-width: 768px) {
+    .footer_container {
+    font-size: 15px;
+    height: auto;
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .instagram_container,
+  .numero_container {
+    width: auto;
+  }
+
+  .copy_text {
+    margin-top: 0;
+    width: auto;
+  }
+}
+
+@media (min-width: 1024px) {
+    .footer_container {
+    font-size: 16px;
+    height: auto;
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .instagram_container,
+  .numero_container {
+    width: auto;
+  }
+
+  .copy_text {
+    margin-top: 0;
+    width: auto;
+  }
+}
