--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -35,6 +35,15 @@
     font-size: 1em;
 }
 
+.card_button{
+    background: none;
+    border: none;
+    padding: 10px;
+    background-color: #D4A437;
+    margin-top: 1em;
+    border-radius: 20px;
+}
+
 @media (min-width: 600px) {
     .card{
         flex-wrap: nowrap;
